# zk-cosmwasm

./: .gitignore  README.md
cw-groth16/: Cargo.toml
cw-groth16-bn/: Cargo.toml
cw-groth16-bn/src/: contract.rs  parser.rs  tests.rs
cw-groth16/artifacts/: checksums.txt  checksums_intermediate.txt  cw_groth16-aarch64.wasm
cw-groth16/src/: contract.rs  error.rs  lib.rs  msg.rs  parser.rs  state.rs  tests.rs
cw-plonk/: Cargo.toml
cw-plonk/src/: contract.rs  error.rs  lib.rs  msg.rs  parser.rs  state.rs  tests.rs
